fix horizontal scroll

--- a/public/stylesheets/2013/header.styl
+++ b/public/stylesheets/2013/header.styl
@@ -35,6 +35,8 @@ body
         background: url('/images/final-banner3.jpg') no-repeat center center
         background-size cover
         border-bottom: 5px solid #353439
+        margin-left: 0
+        margin-right: 0
         .votenow
           position absolute
           top 242px
